## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = async

async_SOURCES = \
	main.c \
	lib/async.c \
	lib/async.h \
	lib/async_impl.h \
	lib/async_libev.c \
	lib/http.c \
	lib/http.h \
	lib/info.c \
	lib/info.h \
	lib/internal.c \
	lib/internal.h \
	lib/json.c \
	lib/json.h \
	lib/logger.c \
	lib/logger.h \
	lib/login.c \
	lib/login.h \
	lib/lwdb.c \
	lib/lwdb.h \
	lib/lwjs.c \
	lib/lwjs.h \
	lib/lwqq.h \
	lib/lwqq-config.h \
	lib/md5.c \
	lib/md5.h \
	lib/msg.c \
	lib/msg.h \
	lib/queue.h \
	lib/smemory.c \
	lib/smemory.h \
	lib/swsqlite.c \
	lib/swsqlite.h \
	lib/type.c \
	lib/type.h \
	lib/url.c \
	lib/url.h \
	lib/utility.c \
	lib/utility.h \
	lib/vplist.c \
	lib/vplist.h

async_LDADD = -lcurl 

